chore: migrate UI to JavaFX; remove PMD and Swing/JFreeChart; add GUIFX & JavaFX chart; update POM and README